# hotaru-code

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hotaru.json  pyproject.toml  release-please-config.json
.github/workflows/: publish-pypi.yml  release.yml
.hotaru/agents/: code-review.md
docs/: tui-migration.md
docs/plans/: 2026-02-18-opencode-loose-coupling-design.md  2026-02-18-opencode-loose-coupling.md
docs/rfc/: 2026-02-24-opencode-context-convergence.md
docs/specs/: webui-mvp-testplan.md  webui-mvp.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Terminal.tsx  TerminalPanel.tsx  api.ts  styles.css  types.ts
openapi/: hotaru.v1.yaml
src/hotaru/: __init__.py
tests/: conftest.py  helpers.py
tests/agent/: test_agent_config_compat.py  test_agent_permissions.py
tests/app_services/: test_preference_service.py  test_request_contract.py  test_session_service_status.py  test_session_service_title.py
tests/cli/: test_debug_lsp_command.py  test_mcp_command.py  test_run_orchestration.py  test_run_stream.py  test_tui_command.py  test_web_command.py
tests/command/: test_init_command.py
tests/contract/: test_openapi_valid.py
tests/core/: test_config_contract.py  test_config_instructions.py  test_config_markdown_agents.py
tests/lsp/: test_client_diagnostics_wait.py  test_client_shutdown.py  test_lsp_config.py  test_lsp_operations.py  test_lsp_touch_file.py  test_server_catalog.py
tests/mcp/: test_mcp_auth_status.py  test_mcp_lifecycle.py
tests/permission/: test_permission_constants.py  test_permission_flow.py  test_permission_rules.py
tests/project/: test_project_init_event.py  test_project_storage.py
tests/provider/: test_openai_sdk_stream.py  test_provider_auth.py  test_provider_key_resolution.py  test_provider_listing.py  test_transform_anthropic.py  test_transform_message_builder.py  test_transform_pipeline.py
tests/pty/: test_pty_manager.py
tests/question/: test_question_flow.py
tests/runtime/: test_app_context.py  test_logging.py
tests/server/: conftest.py  test_error_handlers.py  test_event_stream_filtering.py  test_permission_question_routes.py  test_request_directory_context.py  test_server_lifecycle.py  test_server_startup.py  test_v1_routes.py  test_web_static_routes.py
tests/session/: test_compaction.py  test_doom_loop.py  test_instruction_prompt.py  test_llm_stream.py  test_message_events.py  test_message_store_storage.py  test_processor_factory.py  test_processor_plan_reminder.py  test_processor_steps.py  test_retry.py  (+4 more)
(+301 files in other folders)
