[project]
name = "hotaru-code"
version = "0.1.0"
description = "Python translation of OpenCode - AI-powered coding assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-ulid>=2.0",
    "platformdirs>=4.0",
    "typer>=0.9",
    "rich>=13.0",
    "anyio>=4.0",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "anthropic>=0.30",
    "openai>=1.30",
    "structlog>=24.0",
    "pathspec>=0.12",
]

[project.scripts]
hotaru = "hotaru.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotaru"]
