[project]
name = "hotaru-code"
version = "0.2.1"
description = "AI-powered coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-ulid>=2.0",
    "platformdirs>=4.0",
    "typer>=0.9",
    "rich>=13.0",
    "anyio>=4.0",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "anthropic>=0.30",
    "openai>=1.30",
    "structlog>=24.0",
    "pathspec>=0.12",
    "pyyaml>=6.0",
    "starlette>=0.35",
    "uvicorn>=0.27",
    "textual>=0.50",
    "mcp>=1.0",
    "python-lsp-jsonrpc>=1.1.2",
    "websockets>=16.0",
]

[project.scripts]
hotaru = "hotaru.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/hotaru/webui/dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hotaru"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error::pydantic.warnings.PydanticDeprecatedSince20",
]
